feat: 단과대학 목록 조회 API 구현
#6